--- a/demonslayer.kv
+++ b/demonslayer.kv
@@ -2,8 +2,47 @@
 <DemonSlayer>:
   Label:
     font_size: 20
-    text: "DEMON"
+    text: "Demon Slayer"
 
   ParallaxBG:
-    source: "images/Mountains_01.png"
-    size: (500,500)
+    ParallaxIMG:
+      source: "images/NonMovingBG.png"
+      size: app.window.size
+      pos: (0, 0)
+      speed: 0
+
+    ParallaxIMG:
+      source: "images/Clouds_01.png"
+      size: app.window.size
+      pos: (0, 0)
+      speed: 5
+
+    ParallaxIMG:
+      source: "images/Clouds_02.png"
+      size: app.window.size
+      pos: (app.window.width, 0)
+      speed: 5
+
+    ParallaxIMG:
+      source: "images/Mountains_01.png"
+      size: app.window.size
+      pos: (0, 0)
+      speed: 10
+
+    ParallaxIMG:
+      source: "images/Mountains_02.png"
+      size: app.window.size
+      pos: (app.window.width, 0)
+      speed: 10
+
+    ParallaxIMG:
+      source: "images/Road_01.png"
+      size: app.window.size
+      pos: (0, 0)
+      speed: 15
+
+    ParallaxIMG:
+      source: "images/Road_02.png"
+      size: app.window.size
+      pos: (app.window.width, 0)
+      speed: 15
