From one screen to another

--- a/demonslayer.kv
+++ b/demonslayer.kv
@@ -1,48 +1,52 @@
 #:kivy 1.0.9
 <DemonSlayer>:
-  Label:
-    font_size: 20
-    text: "Demon Slayer"
+  StartScreen
+    name: "start_screen"
+  GameOverScreen
+    name: "game_over_screen"
+    Label:
+      text: "Game Over"
+  MainScreen:
+    name: "main_screen"
+    ParallaxBG:
+      ParallaxIMG:
+        source: "images/NonMovingBG.png"
+        size: app.window.size
+        pos: (0, 0)
+        speed: 0
 
-  ParallaxBG:
-    ParallaxIMG:
-      source: "images/NonMovingBG.png"
-      size: app.window.size
-      pos: (0, 0)
-      speed: 0
+      ParallaxIMG:
+        source: "images/Clouds_01.png"
+        size: app.window.size
+        pos: (0, 0)
+        speed: 5
 
-    ParallaxIMG:
-      source: "images/Clouds_01.png"
-      size: app.window.size
-      pos: (0, 0)
-      speed: 5
+      ParallaxIMG:
+        source: "images/Clouds_02.png"
+        size: app.window.size
+        pos: (app.window.width, 0)
+        speed: 5
 
-    ParallaxIMG:
-      source: "images/Clouds_02.png"
-      size: app.window.size
-      pos: (app.window.width, 0)
-      speed: 5
+      ParallaxIMG:
+        source: "images/Mountains_01.png"
+        size: app.window.size
+        pos: (0, 0)
+        speed: 10
 
-    ParallaxIMG:
-      source: "images/Mountains_01.png"
-      size: app.window.size
-      pos: (0, 0)
-      speed: 10
+      ParallaxIMG:
+        source: "images/Mountains_02.png"
+        size: app.window.size
+        pos: (app.window.width, 0)
+        speed: 10
 
-    ParallaxIMG:
-      source: "images/Mountains_02.png"
-      size: app.window.size
-      pos: (app.window.width, 0)
-      speed: 10
+      ParallaxIMG:
+        source: "images/Road_01.png"
+        size: app.window.size
+        pos: (0, 0)
+        speed: 15
 
-    ParallaxIMG:
-      source: "images/Road_01.png"
-      size: app.window.size
-      pos: (0, 0)
-      speed: 15
-
-    ParallaxIMG:
-      source: "images/Road_02.png"
-      size: app.window.size
-      pos: (app.window.width, 0)
-      speed: 15
+      ParallaxIMG:
+        source: "images/Road_02.png"
+        size: app.window.size
+        pos: (app.window.width, 0)
+        speed: 15
