Changed Image and set new speed

--- a/parallax_bg.kv
+++ b/parallax_bg.kv
@@ -1,7 +1,7 @@
 #:kivy 1.0.9
 <ParallaxBG>:
   ParallaxIMG:
-    source: "images/NonMovingBG.png"
+    source: "images/Background.png"
     size: app.window.size
     pos: (0, 0)
     speed: 0
@@ -15,7 +15,7 @@
   ParallaxIMG:
     source: "images/Clouds_02.png"
     size: app.window.size
-    pos: (app.window.width, 0)
+    pos: (self.width, 0)
     speed: 5
 
   ParallaxIMG:
@@ -27,17 +27,17 @@
   ParallaxIMG:
     source: "images/Mountains_02.png"
     size: app.window.size
-    pos: (app.window.width, 0)
+    pos: (self.width, 0)
     speed: 10
 
   ParallaxIMG:
     source: "images/Road_01.png"
     size: app.window.size
     pos: (0, 0)
-    speed: 15
+    speed: 20
 
   ParallaxIMG:
     source: "images/Road_02.png"
     size: app.window.size
     pos: (app.window.width, 0)
-    speed: 15
+    speed: 20
