--- a/demonslayer.kv
+++ b/demonslayer.kv
@@ -1,8 +1,9 @@
 #:kivy 1.0.9
+#:import constants constants
 <DemonSlayer>:
   StartScreen
-    name: "start_screen"
+    name: constants.START_SCREEN
   GameOverScreen
-    name: "game_over_screen"
+    name: constants.GAME_OVER_SCREEN
   MainScreen:
-    name: "main_screen"
+    name: constants.MAIN_SCREEN
