changed instruction screen

--- a/demonslayer.kv
+++ b/demonslayer.kv
@@ -7,3 +7,5 @@
     name: constants.GAME_OVER_SCREEN
   MainScreen:
     name: constants.MAIN_SCREEN
+  InstructionScreen:
+    name: constants.INSTRUCTION_SCREEN
