added difficulty sceen, changed some font sizes

--- a/demonslayer.kv
+++ b/demonslayer.kv
@@ -9,3 +9,5 @@
     name: constants.MAIN_SCREEN
   InstructionScreen:
     name: constants.INSTRUCTION_SCREEN
+  DifficultyScreen
+    name:constants.DIFFICULTY_SCREEN
